2017 xxx xx Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.0.5
* Proportional change of spacings when a mono font changed for the flow UI
* New feature: show/hide comments/docstrings/except blocks on the flowUI
* More flexible pyflakes suppression line
* New feature: smart zoom; two levels are available now: full view and no
  content-no comment-no docstring

2017 Dec 3 Sergey Satskiy <sergey.satskiy@gmail.com>

* Verion 4.0.4
* Better approach to setup.py (on some systems it did not work as expected)

2017 Nov 30 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.0.3
* Cosmetic changes (pep8 compatibility)
* New flow setting to enable CML indicators on the diagram (default: False)
* Better icon for the 'build imports diagram' buttons/menu items
* Context menu on the flow UI to switch if branches when many of them are
  selected
* Multiple bug fixes
* UI for the control flow to replace text and for custom colors

2017 Nov 19 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.0.2
* reworked import resolution procedure
* bug fix: imports/definitions panel resizing when a text editor is resized
* bug fix: do not use native dialogs to open/save files

2017 Nov 02 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.0.1
* Removing debugging printouts
* pypi friendlier package description

2017 Oct 29 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.0.0
* First public version for Python 3. From now on Python 2 is not supported.
* pip installable

2016 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 3.0.2
* Getting rid of QWebKit dependency. It is not found in newer Ubuntu releases

2016 Sep 14 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 3.0.1
* Fixes packaging for Fedora and Centos

2016 Sep 05 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 3.0.0
* Major new feature: automatic flow chart generation on a separate pane

2015 Oct 15 Sergey Satskiy <sergey.satskiy@gmail.com>
