@@ -60,6 +60,20 @@ class CFlowSettings:
         setattr(self, 'noContent', False)
         setattr(self, 'noComment', False)
         setattr(self, 'noDocstring', False)
+        setattr(self, 'noBlock', False)
+        setattr(self, 'noImport', False)
+        setattr(self, 'noBreak', False)
+        setattr(self, 'noContinue', False)
+        setattr(self, 'noReturn', False)
+        setattr(self, 'noRaise', False)
+        setattr(self, 'noAssert', False)
+        setattr(self, 'noSysExit', False)
+        setattr(self, 'noDecor', False)
+        setattr(self, 'noFor', False)
+        setattr(self, 'noWhile', False)
+        setattr(self, 'noWith', False)
+        setattr(self, 'noTry', False)
+        setattr(self, 'noIf', False)
 
         self.onFlowZoomChanged()
 
