@@ -4,8 +4,11 @@
 * Proportional change of spacings when a mono font changed for the flow UI
 * New feature: show/hide comments/docstrings/except blocks on the flowUI
 * More flexible pyflakes suppression line
-* New feature: smart zoom; two levels are available now: full view and no
-  content-no comment-no docstring
+* New feature: smart zoom; four levels are available now:
+  - full view
+  - no content, no comment, no docstring
+  - no content, no comment, no docstring, no plain items, no decorators
+  - only top level classes and functions
 
 2017 Dec 3 Sergey Satskiy <sergey.satskiy@gmail.com>
 
